# popart_networks

./: .flake8  .gitignore  .gitmodules  .isort.cfg  CMakeLists.txt  MANIFEST.in  README.md  premake5.lua  pyproject.toml  requirements.txt  setup.py
.github/workflows/: deploy.yml  test.yml  wheels.yml
include/: seqgraph.hpp
scripts/: example.py  install_premake.sh  make_command.sh
src/: main.cpp  python_wrapper.cpp  seqgraph.cpp
src/itaxotools/_popart_networks/include/: python_wrapper.h  seqgraph.hpp
src/itaxotools/_popart_networks/src/: dummy.cpp  python_wrapper.cpp  seqgraph.cpp
src/itaxotools/popart_networks/: __init__.py  __main__.py  preparse.py  types.py  wrapper.py
test/: Popart_example_notraits_phased_Moldformat.nex  Popart_example_notraits_phasedformat.nex  example.nex  test.py
tests/: test_algorithms.py
